--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "start-postcss-gulp",
+  "name": "start-postcss",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "dependencies": {},
   "devDependencies": {
     "autoprefixer": "^9.7.4",
     "css-mqpacker": "^7.0.0",
